# sharepoint_automation

./: .gitignore  LICENSE  pyproject.toml
src/: main.py
src/config/: __init__.py  settings.py
src/services/: __init__.py
src/services/sharepoint/: __init__.py  connection.py
